fixed project description wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@ html {
 }
 
 .project-details p {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .project-details a {
@@ -324,7 +324,7 @@ footer p {
 }
 
 @media (max-width: 630px) {
-    .project-img {
+    .project-img, .project-details {
         max-width: 90vw;
     }
 }
